Agrego el filtrado por categoria , agego cambios a la documentacion
